Added local network

--- a/Fnd/V1/Collector/fnd-v1-api-collector/.env.local
+++ b/Fnd/V1/Collector/fnd-v1-api-collector/.env.local
@@ -18,9 +18,9 @@ TIMEZONE=Europe/Rome
 
 # Network Configuration
 NETWORK_SUBNET=172.16.10.0/24
-APP_IP_ADDRESS=172.16.10.101
-DB_IP_ADDRESS=172.16.10.202
-ELASTICSEARCH_IP_ADDRESS=172.16.10.203
+APP_IP_ADDRESS=172.16.10.100
+DB_IP_ADDRESS=172.16.10.140
+ELASTICSEARCH_IP_ADDRESS=172.16.10.190
 
 # Database Configuration
 DB_DATABASE=app
@@ -40,70 +40,27 @@ NGINX_PHP_VERSION=7.4
 NGINX_PHP_PM_MAX_CHILDREN=32
 
 # Dev
-PROJECT_PATH=Products/XPipe/V1/fnd-v1-api-collector
+PROJECT_PATH=Fnd/V1/Collector/fnd-v1-api-collector
 CODE_PATH=src
 
 # Core
 CORE_MODULE_PATH=Core/V1/Module
 CORE_VENDOR_PATH=app/code/Core
 
-# Academy
-ACADEMY_MODULE_PATH=Academy/V1/Api
-ACADEMY_VENDOR_PATH=app/code/Academy
-
-# Ai
-AI_MODULE_PATH=Ai/V1/Api
-AI_VENDOR_PATH=app/code/Ai
-
-# Cmdb
-CMDB_MODULE_PATH=Cmdb/V1/Api
-CMDB_VENDOR_PATH=app/code/Cmdb
-
-# Cms
-CMS_MODULE_PATH=Cms/V1/Api
-CMS_VENDOR_PATH=app/code/Cms
-
-# Crm
-CRM_MODULE_PATH=Crm/V1/Api
-CRM_VENDOR_PATH=app/code/Crm
-
-# Docs
-DOCS_MODULE_PATH=Docs/V1/Api
-DOCS_VENDOR_PATH=app/code/Docs
-
-# Iam
-IAM_MODULE_PATH=Iam/V1/Api
-IAM_VENDOR_PATH=app/code/Iam
-
-# Lab
-LAB_MODULE_PATH=Lab/V1/Api
-LAB_VENDOR_PATH=app/code/Lab
-
-# Logging
-LOGGING_MODULE_PATH=Logging/V1/Api
-LOGGING_VENDOR_PATH=app/code/Logging
-
-# Monitoring
-MONITORING_MODULE_PATH=Monitoring/V1/Api
-MONITORING_VENDOR_PATH=app/code/Monitoring
-
-# Pipelines
-PIPELINES_MODULE_PATH=Pipelines/V1/Api
-PIPELINES_VENDOR_PATH=app/code/Pipelines
-
-# Security
-SECURITY_MODULE_PATH=Security/V1/Api
-SECURITY_VENDOR_PATH=app/code/Security
+# Fnd
+FND_MODULE_PATH=Fnd/V1/Api
+FND_VENDOR_PATH=app/code/Fnd
 
 # Core envs
-XPIPE_CORE_PRODUCT_NAME="XPipe Collector"
-XPIPE_CORE_PRODUCT_VERSION=1.0.0
+CORE_PRODUCT_NAME="Fnd Collector"
+CORE_PRODUCT_VERSION=1.0.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=0
+CORE_GITHUB_ACCESS_TOKEN=
 
-# Pipelines envs
-PIPELINES_GITHUB_ACCESS_TOKEN=
-PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
-PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
+# Fnd Collector envs
+FND_COLLECTOR_BASE_URL=http://172.16.10.100
+FND_COLLECTOR_ADMIN_USERNAME=carbon.user
+FND_COLLECTOR_ADMIN_PASSWORD=admin123
 
-# Iam envs
-IAM_GROUPS_ACCESS_TOKEN=
+# Fnd Notifications envs
+FND_NOTIFICATIONS_ACCESS_TOKEN=secret
