--- a/Fnd/V1/Collector/fnd-v1-api-collector/docker-compose.local.yml
+++ b/Fnd/V1/Collector/fnd-v1-api-collector/docker-compose.local.yml
@@ -10,30 +10,22 @@ services:
     volumes:
       - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
       - "${BASE_PATH}/${CORE_MODULE_PATH}/:${APP_CODE_PATH}/${CORE_VENDOR_PATH}"
-      - "${BASE_PATH}/${ACADEMY_MODULE_PATH}/:${APP_CODE_PATH}/${ACADEMY_VENDOR_PATH}"
-      #- "${BASE_PATH}/${AI_MODULE_PATH}/:${APP_CODE_PATH}/${AI_VENDOR_PATH}"
-      - "${BASE_PATH}/${CMDB_MODULE_PATH}/:${APP_CODE_PATH}/${CMDB_VENDOR_PATH}"
-      #- "${BASE_PATH}/${CMS_MODULE_PATH}/:${APP_CODE_PATH}/${CMS_VENDOR_PATH}"
-      - "${BASE_PATH}/${CRM_MODULE_PATH}/:${APP_CODE_PATH}/${CRM_VENDOR_PATH}"
-      - "${BASE_PATH}/${DOCS_MODULE_PATH}/:${APP_CODE_PATH}/${DOCS_VENDOR_PATH}"
-      - "${BASE_PATH}/${IAM_MODULE_PATH}/:${APP_CODE_PATH}/${IAM_VENDOR_PATH}"
-      - "${BASE_PATH}/${LAB_MODULE_PATH}/:${APP_CODE_PATH}/${LAB_VENDOR_PATH}"
-      - "${BASE_PATH}/${LOGGING_MODULE_PATH}/:${APP_CODE_PATH}/${LOGGING_VENDOR_PATH}"
-      - "${BASE_PATH}/${MONITORING_MODULE_PATH}/:${APP_CODE_PATH}/${MONITORING_VENDOR_PATH}"
-      - "${BASE_PATH}/${PIPELINES_MODULE_PATH}/:${APP_CODE_PATH}/${PIPELINES_VENDOR_PATH}"
-      - "${BASE_PATH}/${SECURITY_MODULE_PATH}/:${APP_CODE_PATH}/${SECURITY_VENDOR_PATH}"
+      - "${BASE_PATH}/${FND_MODULE_PATH}/:${APP_CODE_PATH}/${FND_VENDOR_PATH}"
     hostname: "${APP_NAME}.local"
     environment:
       # Core envs
-      - XPIPE_CORE_PRODUCT_NAME=${XPIPE_CORE_PRODUCT_NAME}
-      - XPIPE_CORE_PRODUCT_VERSION=${XPIPE_CORE_PRODUCT_VERSION}
+      - CORE_PRODUCT_NAME=${CORE_PRODUCT_NAME}
+      - CORE_PRODUCT_VERSION=${CORE_PRODUCT_VERSION}
       - CORE_STOREVIEW_ITALIAN_TOGGLE=${CORE_STOREVIEW_ITALIAN_TOGGLE}
-      # Pipelines envs
-      - PIPELINES_GITHUB_ACCESS_TOKEN=${PIPELINES_GITHUB_ACCESS_TOKEN}
-      - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
-      - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
-      # Iam envs
-      - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
+      - CORE_GITHUB_ACCESS_TOKEN=${CORE_GITHUB_ACCESS_TOKEN}
+      # Fnd Collector envs
+      - FND_COLLECTOR_BASE_URL=${FND_COLLECTOR_BASE_URL}
+      - FND_COLLECTOR_ADMIN_USERNAME=${FND_COLLECTOR_ADMIN_USERNAME}
+      - FND_COLLECTOR_ADMIN_PASSWORD=${FND_COLLECTOR_ADMIN_PASSWORD}
+      # Fnd Notifications envs
+      - FND_NOTIFICATIONS_ACCESS_TOKEN=${FND_NOTIFICATIONS_ACCESS_TOKEN}
+      # Fnd Gateway envs
+      - FND_GATEWAY_ACCESS_TOKEN=${FND_GATEWAY_ACCESS_TOKEN}
     ports:
       - "8080:80"
     networks:
@@ -62,7 +54,7 @@ services:
       - "db:/var/lib/mysql"
     hostname: "${APP_NAME}-db.local"
     ports:
-      - "33052:3306"
+      - "33140:3306"
     networks:
       default:
         ipv4_address: "${DB_IP_ADDRESS}"
