--- a/Fnd/V1/Collector/fnd-v1-api-collector/src/.gitignore
+++ b/Fnd/V1/Collector/fnd-v1-api-collector/src/.gitignore
@@ -80,140 +80,20 @@ atlassian*
 /app/code/*
 !/app/code/.gitkeep
 
-# Domain Academy Excludes
-!/app/code/Academy
-/app/code/Academy/*
-!/app/code/Academy/.gitkeep
-
-# Domain Ai Excludes
-!/app/code/Ai
-/app/code/Ai/*
-!/app/code/Ai/.gitkeep
-
-# Domain Apm Excludes
-!/app/code/Apm
-/app/code/Apm/*
-!/app/code/Apm/.gitkeep
-
-# Domain Cmdb Excludes
-!/app/code/Cmdb
-/app/code/Cmdb/*
-!/app/code/Cmdb/.gitkeep
-
-# Domain Cms Excludes
-!/app/code/Cms
-/app/code/Cms/*
-!/app/code/Cms/.gitkeep
-
 # Domain Core Excludes
 !/app/code/Core
 /app/code/Core/*
 !/app/code/Core/.gitkeep
 
-# Domain Crm Excludes
-!/app/code/Crm
-/app/code/Crm/*
-!/app/code/Crm/.gitkeep
-
-# Domain Docs Excludes
-!/app/code/Docs
-/app/code/Docs/*
-!/app/code/Docs/.gitkeep
-
-# Domain Iam Excludes
-!/app/code/Iam
-/app/code/Iam/*
-!/app/code/Iam/.gitkeep
-
-# Domain Lab Excludes
-!/app/code/Lab
-/app/code/Lab/*
-!/app/code/Lab/.gitkeep
-
-# Domain Logging Excludes
-!/app/code/Logging
-/app/code/Logging/*
-!/app/code/Logging/.gitkeep
-
-# Domain Monitoring Excludes
-!/app/code/Monitoring
-/app/code/Monitoring/*
-!/app/code/Monitoring/.gitkeep
-
-# Domain Pipelines Excludes
-!/app/code/Pipelines
-/app/code/Pipelines/*
-!/app/code/Pipelines/.gitkeep
-
-# Domain School Excludes
-!/app/code/School
-/app/code/School/*
-!/app/code/School/.gitkeep
-
-# Domain Security Excludes
-!/app/code/Security
-/app/code/Security/*
-!/app/code/Security/.gitkeep
+# Domain Fnd Excludes
+!/app/code/Fnd
+/app/code/Fnd/*
+!/app/code/Fnd/.gitkeep
 
 # Product XPipe Excludes
 !/app/code/Pipe
 /app/code/Pipe/*
 !/app/code/Pipe/.gitkeep
-
-# Product XBrand Excludes
-!/app/code/Brand
-/app/code/Brand/*
-!/app/code/Brand/.gitkeep
-
-# Product XBook Excludes
-!/app/code/XBook
-/app/code/XBook/*
-!/app/code/XBook/.gitkeep
-
-# Product XDock Excludes
-!/app/code/XDock
-/app/code/XDock/*
-!/app/code/XDock/.gitkeep
-
-# Product XGallery Excludes
-!/app/code/XGallery
-/app/code/XGallery/*
-!/app/code/XGallery/.gitkeep
-
-# Product XLearn Excludes
-!/app/code/XLearn
-/app/code/XLearn/*
-!/app/code/XLearn/.gitkeep
-
-# Product XPharm Excludes
-!/app/code/XPharm
-/app/code/XPharm/*
-!/app/code/XPharm/.gitkeep
-
-# Product XPress Excludes
-!/app/code/XPress
-/app/code/XPress/*
-!/app/code/XPress/.gitkeep
-
-# Product XSite Excludes
-!/app/code/XSite
-/app/code/XSite/*
-!/app/code/XSite/.gitkeep
-
-# Product XStore Excludes
-!/app/code/XStore
-/app/code/XStore/*
-!/app/code/XStore/.gitkeep
-
-# Product XTicket Excludes
-!/app/code/XTicket
-/app/code/XTicket/*
-!/app/code/XTicket/.gitkeep
-
-# Product XWeb Excludes
-!/app/code/XWeb
-/app/code/XWeb/*
-!/app/code/XWeb/.gitkeep
 
 # Custom Modules Excludes
 #!/app/code/Sindria/HelloWorld
