XPipe: update local configuration

--- a/Fnd/V1/Collector/fnd-v1-api-collector/.env.local
+++ b/Fnd/V1/Collector/fnd-v1-api-collector/.env.local
@@ -64,3 +64,9 @@ FND_COLLECTOR_ADMIN_PASSWORD=admin123
 
 # Fnd Notifications envs
 FND_NOTIFICATIONS_ACCESS_TOKEN=secret
+
+# Fnd Gateway envs
+FND_GATEWAY_ACCESS_TOKEN=secret
+
+# Fnd IdentityServer envs
+FND_IDENTITY_SERVER_ACCESS_TOKEN=secret
