--- a/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
+++ b/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
@@ -55,12 +55,12 @@ PIPELINES_VENDOR_PATH=app/code/Pipelines
 XPIPE_CORE_PRODUCT_NAME="Pipelines Collector"
 XPIPE_CORE_PRODUCT_VERSION=1.0.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=0
+CORE_GITHUB_ACCESS_TOKEN=
 
 # Pipelines envs
-PIPELINES_GITHUB_ACCESS_TOKEN=
 PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
 PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
 PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=
 PIPELINES_COLLECTOR_ADMIN_USERNAME=carbon.user
 PIPELINES_COLLECTOR_ADMIN_PASSWORD=admin123
-PIPELINES_COLLECTOR_BASE_URL=http://localhost:8080
+PIPELINES_COLLECTOR_BASE_URL=http://172.16.10.102:8080
