--- a/IaC/xpipe-cloud/fnd-v1-api-collector/service.yaml
+++ b/IaC/xpipe-cloud/fnd-v1-api-collector/service.yaml
@@ -3,16 +3,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: pipelines-v1-prc-orchestrator
-  name: pipelines-v1-prc-orchestrator
+    app: fnd-v1-api-collector
+  name: fnd-v1-api-collector
   namespace: xpipe-cloud
 spec:
   ports:
   - name: web
-    port: 8080
+    port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
   selector:
-    app: pipelines-v1-prc-orchestrator
+    app: fnd-v1-api-collector
   sessionAffinity: None
   type: ClusterIP
