--- a/IaC/xpipe-cloud/iam-v1-api-collector/ingress.yaml
+++ b/IaC/xpipe-cloud/iam-v1-api-collector/ingress.yaml
@@ -1,26 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: pipelines-v1-prc-orchestrator
+  name: iam-v1-api-collector
   namespace: xpipe-cloud
   labels:
-    app: pipelines-v1-prc-orchestrator
+    app: iam-v1-api-collector
   #annotations:
   #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
   ingressClassName: nginx
   rules:
-  - host: orchestrator-xpipe.sindria.org
+  - host: api-xpipe.sindria.org
     http:
       paths:
         -  path: /
            pathType: Prefix
            backend:
             service:
-              name: pipelines-v1-prc-orchestrator
+              name: iam-v1-api-collector
               port:
-                number: 8080
+                number: 80
   tls:
   - hosts:
-    - orchestrator-xpipe.sindria.org
+    - api-xpipe.sindria.org
     secretName: tls-sindriaorg
