--- a/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
@@ -96,8 +96,8 @@ SECURITY_MODULE_PATH=Security/V1/Module
 SECURITY_VENDOR_PATH=app/code/Security
 
 # Core envs
-XPIPE_CORE_PRODUCT_NAME=XPipe
-XPIPE_CORE_PRODUCT_VERSION=1.0
+CORE_PRODUCT_NAME=XPipe
+CORE_PRODUCT_VERSION=1.0
 CORE_GITHUB_ACCESS_TOKEN=
 
 # Pipelines envs
