Pipelines: update collector local env

--- a/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
+++ b/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
@@ -52,8 +52,8 @@ PIPELINES_MODULE_PATH=Pipelines/V1/Api
 PIPELINES_VENDOR_PATH=app/code/Pipelines
 
 # Core envs
-XPIPE_CORE_PRODUCT_NAME="Pipelines Collector"
-XPIPE_CORE_PRODUCT_VERSION=1.0.0
+CORE_PRODUCT_NAME="Pipelines Collector"
+CORE_PRODUCT_VERSION=1.0.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=0
 CORE_GITHUB_ACCESS_TOKEN=
 
