XPipe: added domain envs on xpipe-v1-web-portal

--- a/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
@@ -98,8 +98,38 @@ SECURITY_VENDOR_PATH=app/code/Security
 # Core envs
 CORE_PRODUCT_NAME=XPipe
 CORE_PRODUCT_VERSION=1.0
+CORE_STOREVIEW_ITALIAN_TOGGLE=1
 CORE_GITHUB_ACCESS_TOKEN=
 
+# Fnd envs
+FND_COLLECTOR_BASE_URL=http://172.16.10.100
+FND_COLLECTOR_ADMIN_USERNAME=carbon.user
+FND_COLLECTOR_ADMIN_PASSWORD=admin123
+FND_NOTIFICATIONS_ACCESS_TOKEN=secret
+FND_IDENTITY_SERVER_ACCESS_TOKEN=secret
+FND_GATEWAY_ACCESS_TOKEN=secret
+
+# Iam envs
+IAM_COLLECTOR_BASE_URL=http://172.16.10.101
+IAM_COLLECTOR_ADMIN_USERNAME=carbon.user
+IAM_COLLECTOR_ADMIN_PASSWORD=admin123
+IAM_USERS_ACCESS_TOKEN=secret
+IAM_USERS_META_ACCESS_TOKEN=secret
+IAM_GROUPS_ACCESS_TOKEN=secret
+IAM_POLICIES_ACCESS_TOKEN=secret
+
 # Pipelines envs
-PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
+PIPELINES_COLLECTOR_BASE_URL=http://172.16.10.102
+PIPELINES_COLLECTOR_ADMIN_USERNAME=carbon.user
+PIPELINES_COLLECTOR_ADMIN_PASSWORD=admin123
 PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
+PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=secret
+PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=secret
+
+# Lab envs
+LAB_COLLECTOR_BASE_URL=http://172.16.10.103
+LAB_COLLECTOR_ADMIN_USERNAME=carbon.user
+LAB_COLLECTOR_ADMIN_PASSWORD=admin123
+LAB_CONFIGMAP_VAULT_ACCESS_TOKEN=
+LAB_SHELL_CATALOG_ACCESS_TOKEN=secret
+LAB_ORCHESTRATOR_ACCESS_TOKEN=secret
