add vault base url variable

--- a/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
+++ b/Pipelines/V1/Collector/pipelines-v1-api-collector/.env.local
@@ -61,6 +61,7 @@ CORE_GITHUB_ACCESS_TOKEN=
 PIPELINES_COLLECTOR_BASE_URL=http://172.16.10.102
 PIPELINES_COLLECTOR_ADMIN_USERNAME=carbon.user
 PIPELINES_COLLECTOR_ADMIN_PASSWORD=admin123
+PIPELINES_CONFIGMAP_VAULT_BASE_URL=https://dev-vault-xpipe.sindria.org
 PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
 PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=secret
 PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=secret
