--- a/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
@@ -48,6 +48,7 @@ services:
       - PIPELINES_COLLECTOR_BASE_URL=${PIPELINES_COLLECTOR_BASE_URL}
       - PIPELINES_COLLECTOR_ADMIN_USERNAME=${PIPELINES_COLLECTOR_ADMIN_USERNAME}
       - PIPELINES_COLLECTOR_ADMIN_PASSWORD=${PIPELINES_COLLECTOR_ADMIN_PASSWORD}
+      - PIPELINES_CONFIGMAP_VAULT_BASE_URL=${PIPELINES_CONFIGMAP_VAULT_BASE_URL}
       - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
       - PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=${PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN}
       - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
