add iam collector variables

--- a/Iam/V1/Collector/iam-v1-api-collector/.env.local
+++ b/Iam/V1/Collector/iam-v1-api-collector/.env.local
@@ -57,9 +57,11 @@ XPIPE_CORE_PRODUCT_VERSION=1.0.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=0
 CORE_GITHUB_ACCESS_TOKEN=
 
-# Pipelines envs
-PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
-PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
-
 # Iam envs
-IAM_GROUPS_ACCESS_TOKEN=
+IAM_COLLECTOR_BASE_URL=http://172.16.10.101
+IAM_COLLECTOR_ADMIN_USERNAME=carbon.user
+IAM_COLLECTOR_ADMIN_PASSWORD=admin123
+IAM_USERS_ACCESS_TOKEN=secret
+IAM_USERS_META_ACCESS_TOKEN=secret
+IAM_GROUPS_ACCESS_TOKEN=secret
+IAM_POLICIES_ACCESS_TOKEN=secret
