--- a/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
+++ b/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
@@ -17,12 +17,15 @@ services:
       - XPIPE_CORE_PRODUCT_NAME=${XPIPE_CORE_PRODUCT_NAME}
       - XPIPE_CORE_PRODUCT_VERSION=${XPIPE_CORE_PRODUCT_VERSION}
       - CORE_STOREVIEW_ITALIAN_TOGGLE=${CORE_STOREVIEW_ITALIAN_TOGGLE}
-      # Pipelines envs
-      - PIPELINES_GITHUB_ACCESS_TOKEN=${PIPELINES_GITHUB_ACCESS_TOKEN}
-      - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
-      - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
+      - CORE_GITHUB_ACCESS_TOKEN=${CORE_GITHUB_ACCESS_TOKEN}
       # Iam envs
+      - IAM_COLLECTOR_BASE_URL=${IAM_COLLECTOR_BASE_URL}
+      - IAM_COLLECTOR_ADMIN_USERNAME=${IAM_COLLECTOR_ADMIN_USERNAME}
+      - IAM_COLLECTOR_ADMIN_PASSWORD=${IAM_COLLECTOR_ADMIN_PASSWORD}
+      - IAM_USERS_ACCESS_TOKEN=${IAM_USERS_ACCESS_TOKEN}
+      - IAM_USERS_META_ACCESS_TOKEN=${IAM_USERS_META_ACCESS_TOKEN}
       - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
+      - IAM_POLICIES_ACCESS_TOKEN=${IAM_POLICIES_ACCESS_TOKEN}
     ports:
       - "8081:80"
     networks:
