Iam_Groups - InstallData - not tested

--- a/Iam/V1/Collector/iam-v1-api-collector/.env.local
+++ b/Iam/V1/Collector/iam-v1-api-collector/.env.local
@@ -52,7 +52,7 @@ IAM_MODULE_PATH=Iam/V1/Api
 IAM_VENDOR_PATH=app/code/Iam
 
 # Core envs
-XPIPE_CORE_PRODUCT_NAME="XPipe Collector"
+XPIPE_CORE_PRODUCT_NAME="Iam Collector"
 XPIPE_CORE_PRODUCT_VERSION=1.0.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=0
 CORE_GITHUB_ACCESS_TOKEN=
