task-101: init post login setup module

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -231,6 +231,7 @@ atlassian*
 !/app/code/Pipe/DevRole
 !/app/code/Pipe/DebugSession
 !/app/code/Pipe/TemplateCatalog
+!/app/code/Pipe/PostLoginSetup
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
