task-100: added individual role

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -229,6 +229,7 @@ atlassian*
 !/app/code/Pipe/DemoRole
 !/app/code/Pipe/BetaRole
 !/app/code/Pipe/DevRole
+!/app/code/Pipe/IndividualRole
 !/app/code/Pipe/DebugSession
 !/app/code/Pipe/TemplateCatalog
 !/app/code/Pipe/PostLoginSetup
