add custom dashboard layout

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -233,6 +233,7 @@ atlassian*
 !/app/code/Pipe/DebugSession
 !/app/code/Pipe/TemplateCatalog
 !/app/code/Pipe/PostLoginSetup
+!/app/code/Pipe/Dashboard
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
