--- a/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
@@ -3,17 +3,24 @@
 services:
   # =app
   app:
-    image: "metabase/metabase:${METABASE_TAG}"
+    image: grafana/grafana:latest
     container_name: "${APP_NAME}"
-    restart: always
+    user: '472'
+    #restart: always
     environment:
-      - MB_DB_FILE=${METABASE_DB_FILE}
-      - JAVA_OPTS="-XX:+UseG1GC -Xmx2g -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:StartFlightRecording=duration=60s,filename=/app/apm.jfr"
+      - GF_INSTALL_PLUGINS=${GF_INSTALL_PLUGINS}
+      - GF_SERVER_HTTP_PORT=${GF_SERVER_HTTP_PORT}
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_USERS_ALLOW_SIGN_UP=${GF_USERS_ALLOW_SIGN_UP}
+      - GF_PANELS_DISABLE_SANITIZE_HTML=${GF_PANELS_DISABLE_SANITIZE_HTML}
+      - GF_USERS_DEFAULT_THEME=${GF_USERS_DEFAULT_THEME}
     volumes:
-      - "data:/metabase-data"
+      - data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
     hostname: "${APP_DOMAIN}"
     ports:
-      - "5006:3000"
+      - "5007:5007"
     networks:
       default:
         ipv4_address: "${APP_IP_ADDRESS}"
@@ -32,6 +39,8 @@ services:
 #        reservations:
 #          cpus: '0.50'
 #          memory: 2048M
+#    depends_on:
+#      - engine
 
 # =networks
 networks:
@@ -49,4 +58,4 @@ networks:
 
 # =volumes
 volumes:
-  data:
+  data: {}
