Allow embedding on aggregator service

--- a/Products/XPipe/V1/xpipe-v1-web-aggregator/.env
+++ b/Products/XPipe/V1/xpipe-v1-web-aggregator/.env
@@ -28,6 +28,8 @@ GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
 GF_SERVER_HTTP_PORT=5007
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin123
+GF_SECURITY_ALLOW_EMBEDDING=true
+GF_SECURITY_COOKIE_SECURE=false
 GF_USERS_ALLOW_SIGN_UP=false
 GF_PANELS_DISABLE_SANITIZE_HTML=true
 GF_USERS_DEFAULT_THEME=light
