--- a/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - GF_SERVER_HTTP_PORT=${GF_SERVER_HTTP_PORT}
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_SECURITY_ALLOW_EMBEDDING=${GF_SECURITY_ALLOW_EMBEDDING}
+      - GF_SECURITY_COOKIE_SECURE=${GF_SECURITY_COOKIE_SECURE}
       - GF_USERS_ALLOW_SIGN_UP=${GF_USERS_ALLOW_SIGN_UP}
       - GF_PANELS_DISABLE_SANITIZE_HTML=${GF_PANELS_DISABLE_SANITIZE_HTML}
       - GF_USERS_DEFAULT_THEME=${GF_USERS_DEFAULT_THEME}
