--- a/Products/XPipe/V1/xpipe-v1-web-aggregator/.env
+++ b/Products/XPipe/V1/xpipe-v1-web-aggregator/.env
@@ -33,3 +33,8 @@ GF_SECURITY_COOKIE_SECURE=false
 GF_USERS_ALLOW_SIGN_UP=false
 GF_PANELS_DISABLE_SANITIZE_HTML=true
 GF_USERS_DEFAULT_THEME=light
+GF_AUTH_ANONYMOUS_ENABLED=true
+GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+GF_AUTH_PROXY_ENABLED=true
+GF_AUTH_PROXY_HEADER_NAME=X-WEBAUTH-USER
+GF_AUTH_PROXY_AUTO_SIGN_UP=true
