--- a/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-aggregator/docker-compose.yml
@@ -17,6 +17,11 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=${GF_USERS_ALLOW_SIGN_UP}
       - GF_PANELS_DISABLE_SANITIZE_HTML=${GF_PANELS_DISABLE_SANITIZE_HTML}
       - GF_USERS_DEFAULT_THEME=${GF_USERS_DEFAULT_THEME}
+      - GF_AUTH_ANONYMOUS_ENABLED=${GF_AUTH_ANONYMOUS_ENABLED}
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=${GF_AUTH_ANONYMOUS_ORG_ROLE}
+      #- GF_AUTH_PROXY_ENABLED=${GF_AUTH_PROXY_ENABLED}
+      #- GF_AUTH_PROXY_HEADER_NAME=${GF_AUTH_PROXY_HEADER_NAME}
+      #- GF_AUTH_PROXY_AUTO_SIGN_UP=${GF_AUTH_PROXY_AUTO_SIGN_UP}
     volumes:
       - data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
