--- a/IaC/bastion/wopr-monitor/ingress.yaml
+++ b/IaC/bastion/wopr-monitor/ingress.yaml
@@ -1,3 +1,30 @@
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: wopr-monitor
+#  namespace: bastion
+#  labels:
+#    app: wopr-monitor
+#  #annotations:
+#  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+#spec:
+#  ingressClassName: nginx
+#  rules:
+#  - host: wopr-monitor.sindria.org
+#    http:
+#      paths:
+#        -  path: /
+#           pathType: Prefix
+#           backend:
+#            service:
+#              name: wopr-monitor
+#              port:
+#                number: 80
+#  tls:
+#  - hosts:
+#    - wopr-monitor.sindria.org
+#    secretName: tls-sindriaorg
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -5,25 +32,33 @@ metadata:
   namespace: bastion
   labels:
     app: wopr-monitor
-  #annotations:
-  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+  annotations:
+    #nginx.ingress.kubernetes.io/configuration-snippet: |
+    #  proxy_broken_directive # debug
+    #nginx.ingress.kubernetes.io/server-snippet: |
+    #  proxy_set_header X-WEBAUTH-USER devops;
+    #nginx.ingress.kubernetes.io/configuration-snippet: |
+    #  proxy_set_header X-WEBAUTH-USER devops;
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
-  - host: wopr-monitor.sindria.org
-    http:
-      paths:
-        -  path: /
-           pathType: Prefix
-           backend:
-            service:
-              name: wopr-monitor
-              port:
-                number: 80
+    - host: wopr-monitor.sindria.org
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: wopr-monitor
+                port:
+                  number: 80
   tls:
-  - hosts:
-    - wopr-monitor.sindria.org
-    secretName: tls-sindriaorg
+    - hosts:
+        - wopr-monitor.sindria.org
+      secretName: tls-sindriaorg
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
