--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -234,6 +234,7 @@ atlassian*
 !/app/code/Pipe/TemplateCatalog
 !/app/code/Pipe/PostLoginSetup
 !/app/code/Pipe/Dashboard
+!/app/code/Pipe/AmqpNotifications
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
