--- a/Fnd/V1/Rest/fnd-v1-rst-notifications/.env.local
+++ b/Fnd/V1/Rest/fnd-v1-rst-notifications/.env.local
@@ -3,11 +3,11 @@ HOST_USER_UID=1000
 
 # System Configuration
 #BASE_PATH=/home/ubuntu/xdev/storage/Projects
-BASE_PATH=/Users/lucapitzoi
+BASE_PATH=/Users/lucapitzoi/XPipe
 
 # APP Configuration
-APP_NAME=blog
-APP_DOMAIN=blog.local
+APP_NAME=fnd-v1-rst-notifications
+APP_DOMAIN=fnd-v1-rst-notifications.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -18,8 +18,8 @@ TIMEZONE=Europe/Rome
 
 # Network Configuration
 NETWORK_SUBNET=172.16.10.0/24
-APP_IP_ADDRESS=172.16.10.252
-APP_DB_IP_ADDRESS=172.16.10.253
+APP_IP_ADDRESS=172.16.10.221
+APP_DB_IP_ADDRESS=172.16.10.222
 
 # Database Configuration
 APP_DB_DATABASE=app
@@ -45,5 +45,5 @@ OPENJDK_VERSION=17
 MYSQL_TAG=8.0.37
 
 # Dev
-PROJECT_PATH=XPipe/Lib/blog
-CODE_PATH=src
+PROJECT_PATH=Fnd/V1/Rest/fnd-v1-rst-notifications
+CODE_PATH=
