Monitoring: update and added some things

--- a/Monitoring/V0/wopr-monitor/.env.production
+++ b/Monitoring/V0/wopr-monitor/.env.production
@@ -46,3 +46,19 @@ SELF_HOST="monitoring-self.local"
 SELF_PORT="9100"
 MONITORING_HOSTS="vpn.sindria.corp:9100;wopr-lab-ph-lnx-btn-1.sindria.corp:9100;wopr-lab-ph-lnx-cpn-1.sindria.corp:9100;wopr-lab-ph-lnx-wrk-1.sindria.corp:9100;wopr-lab-ph-lnx-wrk-2.sindria.corp:9100;wopr-lab-ph-lnx-wrk-3.sindria.corp:9100"
 APM_HOSTS=""
+
+# Grafana
+GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+GF_SERVER_HTTP_PORT=3001
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin123
+GF_SECURITY_ALLOW_EMBEDDING=true
+GF_SECURITY_COOKIE_SECURE=false
+GF_USERS_ALLOW_SIGN_UP=false
+GF_PANELS_DISABLE_SANITIZE_HTML=true
+GF_USERS_DEFAULT_THEME=light
+GF_AUTH_ANONYMOUS_ENABLED=true
+GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+GF_AUTH_PROXY_ENABLED=true
+GF_AUTH_PROXY_HEADER_NAME=X-WEBAUTH-USER
+GF_AUTH_PROXY_AUTO_SIGN_UP=true
