--- a/Monitoring/V0/wopr-monitor/docker-compose.production.yml
+++ b/Monitoring/V0/wopr-monitor/docker-compose.production.yml
@@ -131,37 +131,37 @@ services:
           cpus: '0.50'
           memory: 2048M
 
-#  # =advisor
-#  advisor:
-#    image: gcr.io/cadvisor/cadvisor:latest
-#    container_name: "${ADVISOR_APP_NAME}"
-#    restart: always
-#    volumes:
-#      - /:/rootfs:ro
-#      - /var/run:/var/run:rw
-#      - /sys:/sys:ro
-#      - /var/lib/docker/:/var/lib/docker:ro
-#    ports:
-#      - "8081:8080"
-#    networks:
-#      default:
-#        ipv4_address: "${ADVISOR_IP_ADDRESS}"
-#        aliases:
-#          - "${ADVISOR_APP_NAME}.local"
-#    #networks:
-#    #  vpc_<app-name>:
-#    #    ipv4_address: "${ADVISOR_IP_ADDRESS}"
-#    #    aliases:
-#    #      - "${ADVISOR_APP_NAME}.local"
-#    deploy:
-#      mode: global
-#      #resources:
-#      #  limits:
-#      #    cpus: '0.50'
-#      #    memory: 4096M
-#      #  reservations:
-#      #    cpus: '0.50'
-#      #    memory: 2048M
+  #  # =advisor
+  #  advisor:
+  #    image: gcr.io/cadvisor/cadvisor:latest
+  #    container_name: "${ADVISOR_APP_NAME}"
+  #    restart: always
+  #    volumes:
+  #      - /:/rootfs:ro
+  #      - /var/run:/var/run:rw
+  #      - /sys:/sys:ro
+  #      - /var/lib/docker/:/var/lib/docker:ro
+  #    ports:
+  #      - "8081:8080"
+  #    networks:
+  #      default:
+  #        ipv4_address: "${ADVISOR_IP_ADDRESS}"
+  #        aliases:
+  #          - "${ADVISOR_APP_NAME}.local"
+  #    #networks:
+  #    #  vpc_<app-name>:
+  #    #    ipv4_address: "${ADVISOR_IP_ADDRESS}"
+  #    #    aliases:
+  #    #      - "${ADVISOR_APP_NAME}.local"
+  #    deploy:
+  #      mode: global
+  #      #resources:
+  #      #  limits:
+  #      #    cpus: '0.50'
+  #      #    memory: 4096M
+  #      #  reservations:
+  #      #    cpus: '0.50'
+  #      #    memory: 2048M
 
   # =dashboard
   dashboard:
@@ -170,14 +170,27 @@ services:
     user: '472'
     restart: always
     environment:
-      GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource'
+      - GF_INSTALL_PLUGINS=${GF_INSTALL_PLUGINS}
+      - GF_SERVER_HTTP_PORT=${GF_SERVER_HTTP_PORT}
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_SECURITY_ALLOW_EMBEDDING=${GF_SECURITY_ALLOW_EMBEDDING}
+      - GF_SECURITY_COOKIE_SECURE=${GF_SECURITY_COOKIE_SECURE}
+      - GF_USERS_ALLOW_SIGN_UP=${GF_USERS_ALLOW_SIGN_UP}
+      - GF_PANELS_DISABLE_SANITIZE_HTML=${GF_PANELS_DISABLE_SANITIZE_HTML}
+      - GF_USERS_DEFAULT_THEME=${GF_USERS_DEFAULT_THEME}
+      - GF_AUTH_ANONYMOUS_ENABLED=${GF_AUTH_ANONYMOUS_ENABLED}
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=${GF_AUTH_ANONYMOUS_ORG_ROLE}
+      #- GF_AUTH_PROXY_ENABLED=true
+      #- GF_AUTH_PROXY_HEADER_NAME=X-WEBAUTH-USER
+      #- GF_AUTH_PROXY_AUTO_SIGN_UP=true
     volumes:
       - dashboard_data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
-    env_file:
-      - ./grafana/config.monitoring
+    #env_file:
+    #  - ./grafana/config.monitoring
     ports:
-      - "3001:3000"
+      - "3001:3001"
     networks:
       default:
         ipv4_address: "${DASHBOARD_IP_ADDRESS}"
