--- a/Monitoring/V0/wopr-monitor/prometheus/kubelet.yml
+++ b/Monitoring/V0/wopr-monitor/prometheus/kubelet.yml
@@ -1,14 +1,14 @@
 scrape_configs:
-  - job_name: 'cadvisor'
+  - job_name: 'kubelet'
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
     dns_sd_configs:
       - names:
-          - 'tasks.cadvisor'
+          - 'tasks.kubelet'
         type: 'A'
         port: 10250
     scheme: https
-    metrics_path: /metrics/cadvisor
+    metrics_path: /metrics
     tls_config:
       insecure_skip_verify: true
     bearer_token_file: /etc/prometheus/k8s-sa-token.pem
