--- a/Fnd/V1/Rest/fnd-v1-rst-notifications/src/main/resources/application.yaml
+++ b/Fnd/V1/Rest/fnd-v1-rst-notifications/src/main/resources/application.yaml
@@ -2,16 +2,16 @@ version: 0.1.0
 
 nanorest:
   application:
-    name: ${XPIPE_LIB_NANOREST_APPLICATION_NAME:blog}
+    name: ${XPIPE_LIB_NANOREST_APPLICATION_NAME:notifications}
     version: ${XPIPE_LIB_NANOREST_APPLICATION_VERSION:v1}
     # Logger levels (severe, warning, info, debug, off)
     logger: ${XPIPE_LIB_NANOREST_APPLICATION_LOGGER:info}
   datasource:
     driverClassName: ${XPIPE_LIB_NANOREST_DB_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
-    url: ${XPIPE_LIB_NANOREST_DB_CONNECTION_URL:jdbc:mysql://172.16.10.253:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=5000}
+    url: ${XPIPE_LIB_NANOREST_DB_CONNECTION_URL:jdbc:mysql://172.16.10.222:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=5000}
     username: ${XPIPE_LIB_NANOREST_DB_USERNAME:root}
     password: ${XPIPE_LIB_NANOREST_DB_PASSWORD:secret}
-    host: ${XPIPE_LIB_NANOREST_DB_HOST:172.16.10.253}
+    host: ${XPIPE_LIB_NANOREST_DB_HOST:172.16.10.222}
     port: ${XPIPE_LIB_NANOREST_DB_PORT:3306}
     schema: ${XPIPE_LIB_NANOREST_DB_SCHEMA:app}
   nanohttpd:
