Core: updated Notifications module with custom header logic, some bugfixes and cleanup

--- a/Core/V1/Lib/nanoREST/docker-compose.local.yml
+++ b/Core/V1/Lib/nanoREST/docker-compose.local.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+#version: '3.9'
 
 services:
   # =app
@@ -34,7 +34,7 @@ services:
       - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
     hostname: "${APP_NAME}.local"
     ports:
-      - "8080:8080"
+      - "8000:8080"
     networks:
       default:
         ipv4_address: "${APP_IP_ADDRESS}"
