--- a/Core/V1/Lib/nanoREST/.env.local
+++ b/Core/V1/Lib/nanoREST/.env.local
@@ -3,7 +3,7 @@ HOST_USER_UID=1000
 
 # System Configuration
 #BASE_PATH=/home/ubuntu/xdev/storage/Projects
-BASE_PATH=/Users/lucapitzoi
+BASE_PATH=/Users/lucapitzoi/XPipe
 
 # APP Configuration
 APP_NAME=nanoREST
@@ -42,8 +42,8 @@ OPENJDK_TAG=2.1.0
 OPENJDK_VERSION=17
 
 # MySQL
-MYSQL_TAG=8
+MYSQL_TAG=8.0.37
 
 # Dev
-PROJECT_PATH=XPipe/Lib/nanoREST
-CODE_PATH=src
+PROJECT_PATH=Core/V1/Lib/nanoREST
+CODE_PATH=
