--- a/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
@@ -99,6 +99,7 @@ SECURITY_VENDOR_PATH=app/code/Security
 CORE_PRODUCT_NAME=XPipe
 CORE_PRODUCT_VERSION=1.0
 CORE_STOREVIEW_ITALIAN_TOGGLE=1
+CORE_NOTIFICATIONS_ACCESS_TOKEN=secret
 CORE_GITHUB_ACCESS_TOKEN=
 
 # Fnd envs
