--- a/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
@@ -28,6 +28,7 @@ services:
       - CORE_PRODUCT_NAME=${CORE_PRODUCT_NAME}
       - CORE_PRODUCT_VERSION=${CORE_PRODUCT_VERSION}
       - CORE_STOREVIEW_ITALIAN_TOGGLE=${CORE_STOREVIEW_ITALIAN_TOGGLE}
+      - CORE_NOTIFICATIONS_ACCESS_TOKEN=${CORE_NOTIFICATIONS_ACCESS_TOKEN}
       - CORE_GITHUB_ACCESS_TOKEN=${CORE_GITHUB_ACCESS_TOKEN}
       # Fnd envs
       - FND_COLLECTOR_BASE_URL=${FND_COLLECTOR_BASE_URL}
