--- a/Fnd/V1/Rest/fnd-v1-rst-notifications/src/main/resources/application.yaml
+++ b/Fnd/V1/Rest/fnd-v1-rst-notifications/src/main/resources/application.yaml
@@ -49,17 +49,17 @@ core:
   github:
     accessToken: ${CORE_GITHUB_ACCESS_TOKEN:secret}
 
-products:
-  portal:
-    baseUrl: ${PRODUCTS_PORTAL_BASE_URL:http://172.16.10.5}
-    dashboardUrl: ${PRODUCTS_PORTAL_DASHBOARD_URL:http://172.16.10.5/dashboard}
-    adminUsername: ${PRODUCTS_PORTAL_ADMIN_USERNAME:carbon.user}
-    adminPassword: ${PRODUCTS_PORTAL_ADMIN_PASSWORD:admin123}
-    datasource:
-      driverClassName: ${PRODUCTS_PORTAL_DATASOURCE_DB_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
-      url: ${PRODUCTS_PORTAL_DATASOURCE_DB_CONNECTION_URL:jdbc:mysql://172.16.10.40:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=5000}
-      username: ${PRODUCTS_PORTAL_DATASOURCE_DB_USERNAME:root}
-      password: ${PRODUCTS_PORTAL_DATASOURCE_DB_PASSWORD:secret}
-      host: ${PRODUCTS_PORTAL_DATASOURCE_DB_HOST:172.16.10.40}
-      port: ${PRODUCTS_PORTAL_DATASOURCE_DB_PORT:3306}
-      schema: ${PRODUCTS_PORTAL_DATASOURCE_DB_SCHEMA:app}
+#products:
+#  portal:
+#    baseUrl: ${PRODUCTS_PORTAL_BASE_URL:http://172.16.10.5}
+#    dashboardUrl: ${PRODUCTS_PORTAL_DASHBOARD_URL:http://172.16.10.5/dashboard}
+#    adminUsername: ${PRODUCTS_PORTAL_ADMIN_USERNAME:carbon.user}
+#    adminPassword: ${PRODUCTS_PORTAL_ADMIN_PASSWORD:admin123}
+#    datasource:
+#      driverClassName: ${PRODUCTS_PORTAL_DATASOURCE_DB_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
+#      url: ${PRODUCTS_PORTAL_DATASOURCE_DB_CONNECTION_URL:jdbc:mysql://172.16.10.40:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=5000}
+#      username: ${PRODUCTS_PORTAL_DATASOURCE_DB_USERNAME:root}
+#      password: ${PRODUCTS_PORTAL_DATASOURCE_DB_PASSWORD:secret}
+#      host: ${PRODUCTS_PORTAL_DATASOURCE_DB_HOST:172.16.10.40}
+#      port: ${PRODUCTS_PORTAL_DATASOURCE_DB_PORT:3306}
+#      schema: ${PRODUCTS_PORTAL_DATASOURCE_DB_SCHEMA:app}
