--- a/.github/workflows/iac-no-lmd-certs.yml
+++ b/.github/workflows/iac-no-lmd-certs.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   certs:
-    uses: SindriaInc/XPipe/Pipelines/V1/Job/job-no-certs-route53.yml@master
+    uses: SindriaInc/XPipe/.github/workflows/job-no-certs-route53.yml@master
     secrets:
       _AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       _AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -24,4 +24,4 @@ jobs:
       CRT_CERTBOT_EMAIL: ${{ vars.CRT_CERTBOT_EMAIL }}
       CRT_CERTBOT_DOMAIN: "liviomunaridecorazioni.it"
 
-###
+#
