--- a/IaC/lmd-website/ingress.yaml
+++ b/IaC/lmd-website/ingress.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: lmd-website
   labels:
     app: lmd-app
-  #annotations:
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
   #  nginx.ingress.kubernetes.io/permanent-redirect: https://www.liviomunaridecorazioni.it
   #  #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
