task-90: add login service and create keycloak abstract service

--- a/Iam/V1/Collector/iam-v1-api-collector/.env.local
+++ b/Iam/V1/Collector/iam-v1-api-collector/.env.local
@@ -63,5 +63,14 @@ IAM_COLLECTOR_ADMIN_USERNAME=carbon.user
 IAM_COLLECTOR_ADMIN_PASSWORD=admin123
 IAM_USERS_ACCESS_TOKEN=secret
 IAM_USERS_META_ACCESS_TOKEN=secret
+IAM_USERS_IS_BASE_URL=
+IAM_USERS_IS_REALM=
+IAM_USERS_IS_CLIENT_ID=
+IAM_USERS_IS_CLIENT_SECRET=
+IAM_USERS_IS_ADMIN_REALM=
+IAM_USERS_IS_ADMIN_CLIENT_ID=
+IAM_USERS_IS_ADMIN_CLIENT_SECRET=
+IAM_USERS_IS_ADMIN_USERNAME=
+IAM_USERS_IS_ADMIN_PASSWORD=
 IAM_GROUPS_ACCESS_TOKEN=secret
 IAM_POLICIES_ACCESS_TOKEN=secret
