--- a/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
+++ b/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
@@ -24,6 +24,15 @@ services:
       - IAM_COLLECTOR_ADMIN_PASSWORD=${IAM_COLLECTOR_ADMIN_PASSWORD}
       - IAM_USERS_ACCESS_TOKEN=${IAM_USERS_ACCESS_TOKEN}
       - IAM_USERS_META_ACCESS_TOKEN=${IAM_USERS_META_ACCESS_TOKEN}
+      - IAM_USERS_IS_BASE_URL=${IAM_USERS_IS_BASE_URL}
+      - IAM_USERS_IS_REALM=${IAM_USERS_IS_REALM}
+      - IAM_USERS_IS_CLIENT_ID=${IAM_USERS_IS_CLIENT_ID}
+      - IAM_USERS_IS_CLIENT_SECRET=${IAM_USERS_IS_CLIENT_SECRET}
+      - IAM_USERS_IS_ADMIN_REALM=${IAM_USERS_IS_ADMIN_REALM}
+      - IAM_USERS_IS_ADMIN_CLIENT_ID=${IAM_USERS_IS_ADMIN_CLIENT_ID}
+      - IAM_USERS_IS_ADMIN_CLIENT_SECRET=${IAM_USERS_IS_ADMIN_CLIENT_SECRET}
+      - IAM_USERS_IS_ADMIN_USERNAME=${IAM_USERS_IS_ADMIN_USERNAME}
+      - IAM_USERS_IS_ADMIN_PASSWORD=${IAM_USERS_IS_ADMIN_PASSWORD}
       - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
       - IAM_POLICIES_ACCESS_TOKEN=${IAM_POLICIES_ACCESS_TOKEN}
     ports:
