task-90: add create user service

--- a/Iam/V1/Collector/iam-v1-api-collector/.env.local
+++ b/Iam/V1/Collector/iam-v1-api-collector/.env.local
@@ -72,5 +72,7 @@ IAM_USERS_IS_ADMIN_CLIENT_ID=
 IAM_USERS_IS_ADMIN_CLIENT_SECRET=
 IAM_USERS_IS_ADMIN_USERNAME=
 IAM_USERS_IS_ADMIN_PASSWORD=
+IAM_USERS_IS_SERVICE_ACCOUNT_USERNAME=
+IAM_USERS_IS_SERVICE_ACCOUNT_PASSWORD=
 IAM_GROUPS_ACCESS_TOKEN=secret
 IAM_POLICIES_ACCESS_TOKEN=secret
