--- a/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
+++ b/Iam/V1/Collector/iam-v1-api-collector/docker-compose.local.yml
@@ -33,6 +33,8 @@ services:
       - IAM_USERS_IS_ADMIN_CLIENT_SECRET=${IAM_USERS_IS_ADMIN_CLIENT_SECRET}
       - IAM_USERS_IS_ADMIN_USERNAME=${IAM_USERS_IS_ADMIN_USERNAME}
       - IAM_USERS_IS_ADMIN_PASSWORD=${IAM_USERS_IS_ADMIN_PASSWORD}
+      - IAM_USERS_IS_SERVICE_ACCOUNT_USERNAME=${IAM_USERS_IS_SERVICE_ACCOUNT_USERNAME}
+      - IAM_USERS_IS_SERVICE_ACCOUNT_PASSWORD=${IAM_USERS_IS_SERVICE_ACCOUNT_PASSWORD}
       - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
       - IAM_POLICIES_ACCESS_TOKEN=${IAM_POLICIES_ACCESS_TOKEN}
     ports:
