--- a/.github/workflows/iac-no-sindriaschool-certs.yml
+++ b/.github/workflows/iac-no-sindriaschool-certs.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   certs:
-    uses: SindriaInc/XPipe/.github/workflows/job-no-certs-route53.yml@master
+    uses: SindriaInc/pipelines-v1-tpl-jobs/.github/workflows/job-no-certs-route53.yml@master
     secrets:
       _AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       _AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
