--- a/.github/workflows/minecraft-base-bungeecord-rolling.yml
+++ b/.github/workflows/minecraft-base-bungeecord-rolling.yml
@@ -1,16 +1,16 @@
-name: BaseImages CI Minecraft
+name: Minecraft Base BungeeCord Rolling
 
 on:
   push:
     branches:
       - 'master'
     paths:
-      - BaseImages/minecraft/**/*.*
-      - .github/workflows/baseimages-ci-minecraft-void.yml
+      - Minecraft/Base/bungeecord/**/*.*
+      - .github/workflows/minecraft-base-bungeecord-rolling.yml
 
 defaults:
   run:
-    working-directory: BaseImages/minecraft
+    working-directory: Minecraft/Base/bungeecord
 
 jobs:
   build_publish:
@@ -18,9 +18,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set env release
-      run: echo "RELEASE_VERSION=1.2.0" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=1.1.0" >> $GITHUB_ENV
     - name: Set env slug
-      run: echo "REPO_SLUG=minecraft" >> $GITHUB_ENV
+      run: echo "REPO_SLUG=bungeecord" >> $GITHUB_ENV
     - uses: docker/setup-qemu-action@v2
     - name: Login into registry
       env:
