--- a/Core/Lib/nanorest/.env.local
+++ b/Core/Lib/nanorest/.env.local
@@ -6,8 +6,8 @@ HOST_USER_UID=1000
 BASE_PATH=/Users/lucapitzoi/XPipe
 
 # APP Configuration
-APP_NAME=nanoREST
-APP_DOMAIN=nanoREST.local
+APP_NAME=nanorest
+APP_DOMAIN=nanorest.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -45,5 +45,5 @@ OPENJDK_VERSION=17
 MYSQL_TAG=8.0.37
 
 # Dev
-PROJECT_PATH=Core/V1/Lib/nanoREST
+PROJECT_PATH=Core/Lib/nanorest
 CODE_PATH=
